# appium-python-mcp

./: .env.example  .gitignore  CLAUDE_MCP_GUIDE.md  COMPLETE_SETUP.md  COMPLETE_SETUP_GUIDE.md  IDE_SETUP.md  INSTALLATION.md  QUICKSTART.md  README.md  SECURITY.md  SETUP.md  VSCODE_PYCHARM_MCP_SETUP.md  appium_server.py  config.json  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  verify.py
actions/: __init__.py  base_actions.py  device_actions.py  element_actions.py  gesture_actions.py
ai_engine/: __init__.py  command_parser.py  nlp_processor.py  test_generator.py
appium_driver/: __init__.py  capabilities.py  driver.py  session_manager.py
config/: capabilities.json  devices.yaml  environment.py
locators/: __init__.py  locator_engine.py  strategy.py
mcp_server/: __init__.py  handlers.py  schemas.py  server.py
page_objects/: __init__.py  base_page.py  example_pages.py
src/: __init__.py  appium_mcp_server.py  device_handler.py  session_manager.py
tests/: conftest.py  test_appium_actions.py  test_mcp_server.py  test_session_manager.py
utils/: __init__.py  helpers.py  logger.py  reporters.py
