[tool.poetry]
name = "appium-python-mcp"
version = "0.1.0"
description = "A project to demonstrate Appium usage with Python."
authors = ["shakti44 <your-email@example.com>"]

[tool.poetry.dependencies]
appium = "^1.0.0"
mcp = "^1.0.0"
webdriver = "^2.0.0"
logging = "^0.5.0"
pytest = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.backend"