[tool.poetry]
name = "appium-python-mcp"
version = "0.1.0"
description = "A client for Appium written in Python."
authors = ["shakti44 <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
appium-python-client = "^2.0.0"
requests = "^2.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"