[tool.poetry]
name = "appium-python-mcp"
version = "0.1.0"
description = "A client for Appium written in Python."
authors = ["shakti44 <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
appium-python-client = "^2.11.0"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
pydantic = "^2.5.0"
python-dotenv = "^1.0.0"
aiohttp = "^3.9.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"